# prism

./: README.md  WORKSPACE.bazel  package.json  terser.config.json
config/: BUILD.bazel  cc.bzl  cc.bzl.tpl  config.bzl  deps.bzl  platforms.bzl  platforms.bzl.tpl
examples/: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE.bazel  package.json  pnpm-lock.yaml
examples/hello_triangle/: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE.bazel  index.html  main.cpp  main.ts  rollup.config.js  terser.config.json  tsconfig.json
prism/: BUILD.bazel  create.cpp  create.hpp  prism.hpp
prism/app/: BUILD.bazel  application.hpp  input.hpp
prism/app/sdl2/: BUILD.bazel  application.cpp  application.hpp
prism/app/web/: BUILD.bazel  application.cpp  application.hpp  graphics.hpp  js_api.hpp
prism/common/: BUILD.bazel  debug.hpp  log.hpp  platform.hpp  shared.hpp
prism/gfx/: BUILD.bazel  context.hpp  enums.hpp  enums_validate.hpp  types.hpp  types_validate.hpp
prism/gfx/common/: BUILD.bazel  webgpu.inl
prism/gfx/image/: BUILD.bazel  jpg.cpp  jpg.hpp  load.cpp  load.hpp  png.cpp  png.hpp  qoi.cpp  qoi.hpp
prism/gfx/web/: BUILD.bazel  context.cpp  context.hpp  enum_strings.hpp  types.hpp
prism/gfx/wgpu/: BUILD.bazel  context.cpp  context.hpp  types.hpp
prism/graphics/: BUILD.bazel  context.hpp  enums.hpp  enums_validate.hpp  types.hpp  types_validate.hpp
prism/graphics/common/: BUILD.bazel  webgpu.cpp  webgpu.hpp
prism/graphics/image/: BUILD.bazel  jpg.cpp  jpg.hpp  load.cpp  load.hpp  png.cpp  png.hpp  qoi.cpp  qoi.hpp
prism/graphics/web/: BUILD.bazel  context.cpp  context.hpp  enum_strings.hpp  gpu.ts  js_api.hpp  js_strings.hpp  types.hpp
prism/graphics/wgpu/: BUILD.bazel  context.cpp  context.hpp  types.hpp
prism/js/: BUILD.bazel  dom.hpp  dom.ts  gpu.hpp  gpu.ts  index.ts  keycode.ts  log.ts  math.ts  memory.ts  object.hpp  object.ts  ref_map.ts  time.ts  tsconfig.json  webgpu.typings.ts
prism/wasm/: BUILD.bazel  export.hpp  import.hpp
