workspace(name = "com_nullcatalyst_prism")

load("@com_nullcatalyst_prism//config:config.bzl", "prism_config")

prism_config(
    copts = ["/std:c++20"],
    linkopts = [],
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

################################
####       Utilities        ####
################################

################################
####       Libraries        ####
################################

#### Abseil ####

_ABSEIL_VERSION = "20211102.0"

http_archive(
    name = "com_google_absl",
    sha256 = "dcf71b9cba8dc0ca9940c4b316a0c796be8fab42b070bb6b7cab62b48f0e66c4",
    strip_prefix = "abseil-cpp-{version}".format(version = _ABSEIL_VERSION),
    url = "https://github.com/abseil/abseil-cpp/archive/refs/tags/{version}.tar.gz".format(version = _ABSEIL_VERSION),
)

# #### RE2 #####

# _RE2_VERSION = "2022-06-01"

# http_archive(
#     name = "com_googlesource_code_re2",
#     sha256 = "f89c61410a072e5cbcf8c27e3a778da7d6fd2f2b5b1445cd4f4508bee946ab0f",
#     strip_prefix = "re2-{version}".format(version = _RE2_VERSION),
#     url = "https://github.com/google/re2/archive/refs/tags/{version}.tar.gz".format(version = _RE2_VERSION),
# )

#### Google Test ####

_GTEST_VERSION = "release-1.11.0"

http_archive(
    name = "com_google_googletest",
    sha256 = "b4870bf121ff7795ba20d20bcdd8627b8e088f2d1dab299a031c1034eddc93d5",
    strip_prefix = "googletest-{version}".format(version = _GTEST_VERSION),
    url = "https://github.com/google/googletest/archive/refs/tags/{version}.tar.gz".format(version = _GTEST_VERSION),
)

#### wgpu-native ####

_WGPU_VERSION = "0.15.1.2"

http_archive(
    name = "wgpu",
    sha256 = "379e83da9cb2a755e5a48fcf2551e891d19c71af582d2116d7e8ad8b83db3d01",
    strip_prefix = "wgpu-native-lib-{version}".format(version = _WGPU_VERSION),
    url = "https://github.com/nullcatalyst/wgpu-native-lib/archive/refs/tags/v{version}.tar.gz".format(version = _WGPU_VERSION),
)

#### SDL2 ####

_SDL2_VERSION = "2.26.3"

http_archive(
    name = "sdl2",
    build_file = "//third_party/sdl2:sdl2.BUILD",
    sha256 = "af0ff86e4a268bc12c915a0ea19ea1a16419ab1426d92bad5f4e26eb31583967",
    strip_prefix = "SDL-release-{version}".format(version = _SDL2_VERSION),
    url = "https://github.com/libsdl-org/SDL/archive/refs/tags/release-{version}.tar.gz".format(version = _SDL2_VERSION),
)
