workspace(name = "com_nullcatalyst_prism")

load("@com_nullcatalyst_prism//config:config.bzl", "prism_config")
load("@com_nullcatalyst_prism//config:deps.bzl", "prism_dependencies", "prism_wasm_dependencies")

prism_config(
    copts = [],
    linkopts = [],
)

prism_dependencies()

prism_wasm_dependencies()

# NodeJS toolchain, needed for using rollup and terser rules

load("@rules_nodejs//nodejs:repositories.bzl", "nodejs_register_toolchains", _NODE_VERSION = "DEFAULT_NODE_VERSION")

nodejs_register_toolchains(
    name = "node",
    node_version = _NODE_VERSION,
)

load("@aspect_rules_js//npm:npm_import.bzl", "npm_translate_lock")

npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

load("@npm//:repositories.bzl", "npm_repositories")

npm_repositories()
