workspace(name = "com_nullcatalyst_prism")

load("@com_nullcatalyst_prism//config:config.bzl", "prism_config")
load("@com_nullcatalyst_prism//config:deps.bzl", "prism_dependencies", "prism_wasm_dependencies")

prism_config(
    copts = [],
    linkopts = [],
)

prism_dependencies()

prism_wasm_dependencies()

#### WebAssembly Compiler Toolchain ####

_WASMTOOLCHAIN_COMMIT = "48d85bb87be20820f65a4b4f7afb877362ad55af"

http_archive(
    name = "com_nullcatalyst_wasmtoolchain",
    sha256 = "1fe02add01a6c21903fffed1be6851fd1e69ddfc94b937d1b4a392d9374ca53e",
    strip_prefix = "wasmtoolchain-{}".format(_WASMTOOLCHAIN_COMMIT),
    url = "https://github.com/nullcatalyst/wasmtoolchain/archive/{}.tar.gz".format(_WASMTOOLCHAIN_COMMIT),
)

load("@com_nullcatalyst_wasmtoolchain//toolchain:toolchain.bzl", "wasm_toolchain")

wasm_toolchain(name = "wasm_toolchain")
