load("@aspect_rules_js//npm:defs.bzl", "npm_link_package", "npm_package")
load("@npm//:defs.bzl", "npm_link_all_packages")

# npm_link_package(
#     name = "node_modules/@com_nullcatalyst_prism/prism",
#     src = "@com_nullcatalyst_prism//:node_modules/@com_nullcatalyst_prism/prism",
#     visibility = ["//visibility:public"],
# )

npm_package(
    name = "prism",
    srcs = ["@com_nullcatalyst_prism//prism/js"],
    package = "@com_nullcatalyst_prism/prism",
    visibility = ["//visibility:public"],
)

npm_link_package(
    name = "node_modules/@com_nullcatalyst_prism/prism",
    src = ":prism",
    visibility = ["//visibility:public"],
)

npm_link_all_packages(name = "node_modules")
