load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

local_repository(
    name = "com_nullcatalyst_prism",
    path = "..",
)

load("@com_nullcatalyst_prism//config:config.bzl", "prism_config", "prism_dependencies")

prism_config(
    copts = [],
    linkopts = [],
)

prism_dependencies()

#### WebAssembly Compiler Toolchain ####

http_archive(
    name = "bazel_wasm_toolchain",
    sha256 = "b4c517a5d0225607b9c713b79854ade288d350e19e1e6c5dc60d03a9c215b54f",
    strip_prefix = "bazel_wasm_toolchain-adb60ff783bee6445e8ca70800800a4da0eb1cd8",
    url = "https://github.com/nullcatalyst/bazel_wasm_toolchain/archive/adb60ff783bee6445e8ca70800800a4da0eb1cd8.tar.gz",
)

load("@bazel_wasm_toolchain//toolchain:toolchain.bzl", "wasm_toolchain")

wasm_toolchain(name = "wasm_toolchain")

#### Typescript ####

_RULES_TS_VERSION = "1.3.3"

http_archive(
    name = "aspect_rules_ts",
    sha256 = "8eb25d1fdafc0836f5778d33fb8eaac37c64176481d67872b54b0a05de5be5c0",
    strip_prefix = "rules_ts-{version}".format(version = _RULES_TS_VERSION),
    url = "https://github.com/aspect-build/rules_ts/archive/refs/tags/v{version}.tar.gz".format(version = _RULES_TS_VERSION),
)

load("@aspect_rules_ts//ts:repositories.bzl", "rules_ts_dependencies", _TS_VERSION = "LATEST_VERSION")

rules_ts_dependencies(ts_version = _TS_VERSION)

#### Rollup ####

_ROLLUP_RULES_VERSION = "0.14.0"

http_archive(
    name = "aspect_rules_rollup",
    sha256 = "3777f196b7ced25241a6ccdc41551de6bd0817630cce1924919b9e9816676e43",
    strip_prefix = "rules_rollup-{}".format(_ROLLUP_RULES_VERSION),
    url = "https://github.com/aspect-build/rules_rollup/archive/refs/tags/v{}.tar.gz".format(_ROLLUP_RULES_VERSION),
)

load("@aspect_rules_rollup//rollup:dependencies.bzl", "rules_rollup_dependencies")

rules_rollup_dependencies()

#### Terser ####

_TERSER_RULES_VERSION = "0.14.1"

http_archive(
    name = "aspect_rules_terser",
    sha256 = "f30ec7ceff6a01deaf68e501233eba01a339a8d305376706a31de4201d7a260b",
    strip_prefix = "rules_terser-{version}".format(version = _TERSER_RULES_VERSION),
    url = "https://github.com/aspect-build/rules_terser/archive/refs/tags/v{version}.tar.gz".format(version = _TERSER_RULES_VERSION),
)

load("@aspect_rules_terser//terser:dependencies.bzl", "rules_terser_dependencies")

rules_terser_dependencies()

#### NodeJS ####

load("@rules_nodejs//nodejs:repositories.bzl", "nodejs_register_toolchains", _NODE_VERSION = "DEFAULT_NODE_VERSION")

nodejs_register_toolchains(
    name = "node",
    node_version = _NODE_VERSION,
)

load("@aspect_rules_js//npm:npm_import.bzl", "npm_translate_lock")

npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

load("@npm//:repositories.bzl", "npm_repositories")

npm_repositories()
