load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

local_repository(
    name = "com_nullcatalyst_prism",
    path = "..",
)

load("@com_nullcatalyst_prism//config:config.bzl", "prism_config")
load("@com_nullcatalyst_prism//config:deps.bzl", "prism_dependencies")

prism_config(
    copts = [],
    linkopts = [],
)

prism_dependencies()

#### WebAssembly Compiler Toolchain ####

_WASMTOOLCHAIN_COMMIT = "48d85bb87be20820f65a4b4f7afb877362ad55af"

http_archive(
    name = "com_nullcatalyst_wasmtoolchain",
    sha256 = "1fe02add01a6c21903fffed1be6851fd1e69ddfc94b937d1b4a392d9374ca53e",
    strip_prefix = "wasmtoolchain-{}".format(_WASMTOOLCHAIN_COMMIT),
    url = "https://github.com/nullcatalyst/wasmtoolchain/archive/{}.tar.gz".format(_WASMTOOLCHAIN_COMMIT),
)

load("@com_nullcatalyst_wasmtoolchain//toolchain:toolchain.bzl", "wasm_toolchain")

wasm_toolchain(name = "wasm_toolchain")

#### Package Rules (zip) ####

_RULES_PKG_VERSION = "0.8.1"

http_archive(
    name = "rules_pkg",
    sha256 = "8c20f74bca25d2d442b327ae26768c02cf3c99e93fad0381f32be9aab1967675",
    urls = [
        "https://github.com/bazelbuild/rules_pkg/releases/download/{version}/rules_pkg-{version}.tar.gz".format(version = _RULES_PKG_VERSION),
    ],
)

load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")

rules_pkg_dependencies()

#### Typescript ####

_RULES_TS_VERSION = "1.3.3"

http_archive(
    name = "aspect_rules_ts",
    sha256 = "8eb25d1fdafc0836f5778d33fb8eaac37c64176481d67872b54b0a05de5be5c0",
    strip_prefix = "rules_ts-{version}".format(version = _RULES_TS_VERSION),
    url = "https://github.com/aspect-build/rules_ts/archive/refs/tags/v{version}.tar.gz".format(version = _RULES_TS_VERSION),
)

load("@aspect_rules_ts//ts:repositories.bzl", "rules_ts_dependencies", _TS_VERSION = "LATEST_VERSION")

rules_ts_dependencies(ts_version = _TS_VERSION)

#### Rollup ####

_ROLLUP_RULES_VERSION = "0.14.0"

http_archive(
    name = "aspect_rules_rollup",
    sha256 = "3777f196b7ced25241a6ccdc41551de6bd0817630cce1924919b9e9816676e43",
    strip_prefix = "rules_rollup-{}".format(_ROLLUP_RULES_VERSION),
    url = "https://github.com/aspect-build/rules_rollup/archive/refs/tags/v{}.tar.gz".format(_ROLLUP_RULES_VERSION),
)

load("@aspect_rules_rollup//rollup:dependencies.bzl", "rules_rollup_dependencies")

rules_rollup_dependencies()

#### Terser ####

_TERSER_RULES_VERSION = "0.14.1"

http_archive(
    name = "aspect_rules_terser",
    sha256 = "f30ec7ceff6a01deaf68e501233eba01a339a8d305376706a31de4201d7a260b",
    strip_prefix = "rules_terser-{version}".format(version = _TERSER_RULES_VERSION),
    url = "https://github.com/aspect-build/rules_terser/archive/refs/tags/v{version}.tar.gz".format(version = _TERSER_RULES_VERSION),
)

load("@aspect_rules_terser//terser:dependencies.bzl", "rules_terser_dependencies")

rules_terser_dependencies()

#### NodeJS ####

load("@rules_nodejs//nodejs:repositories.bzl", "nodejs_register_toolchains", _NODE_VERSION = "DEFAULT_NODE_VERSION")

nodejs_register_toolchains(
    name = "node",
    node_version = _NODE_VERSION,
)

load("@aspect_rules_js//npm:npm_import.bzl", "npm_translate_lock")

npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

load("@npm//:repositories.bzl", "npm_repositories")

npm_repositories()
