load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

local_repository(
    name = "com_nullcatalyst_prism",
    path = "..",
)

load("@com_nullcatalyst_prism//config:config.bzl", "prism_config")
load("@com_nullcatalyst_prism//config:deps.bzl", "prism_dependencies", "prism_wasm_dependencies")

prism_config(
    copts = [],
    linkopts = [],
)

prism_dependencies()

prism_wasm_dependencies()

#### Additional Dependencies (needed only for outputting wasm) ####

load("@aspect_rules_ts//ts:repositories.bzl", "rules_ts_dependencies", _TS_VERSION = "LATEST_VERSION")

rules_ts_dependencies(ts_version = _TS_VERSION)

load("@aspect_rules_rollup//rollup:dependencies.bzl", "rules_rollup_dependencies")

rules_rollup_dependencies()

load("@aspect_rules_terser//terser:dependencies.bzl", "rules_terser_dependencies")

rules_terser_dependencies()

load("@rules_nodejs//nodejs:repositories.bzl", "nodejs_register_toolchains", _NODE_VERSION = "DEFAULT_NODE_VERSION")

nodejs_register_toolchains(
    name = "node",
    node_version = _NODE_VERSION,
)

load("@aspect_rules_js//npm:npm_import.bzl", "npm_translate_lock")

npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

load("@npm//:repositories.bzl", "npm_repositories")

npm_repositories()

#### Package Rules (zip) ####

_RULES_PKG_VERSION = "0.8.1"

http_archive(
    name = "rules_pkg",
    sha256 = "8c20f74bca25d2d442b327ae26768c02cf3c99e93fad0381f32be9aab1967675",
    urls = [
        "https://github.com/bazelbuild/rules_pkg/releases/download/{version}/rules_pkg-{version}.tar.gz".format(version = _RULES_PKG_VERSION),
    ],
)

load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")

rules_pkg_dependencies()

#### WebAssembly Compiler Toolchain ####

_WASMTOOLCHAIN_COMMIT = "48d85bb87be20820f65a4b4f7afb877362ad55af"

http_archive(
    name = "com_nullcatalyst_wasmtoolchain",
    sha256 = "1fe02add01a6c21903fffed1be6851fd1e69ddfc94b937d1b4a392d9374ca53e",
    strip_prefix = "wasmtoolchain-{}".format(_WASMTOOLCHAIN_COMMIT),
    url = "https://github.com/nullcatalyst/wasmtoolchain/archive/{}.tar.gz".format(_WASMTOOLCHAIN_COMMIT),
)

load("@com_nullcatalyst_wasmtoolchain//toolchain:toolchain.bzl", "wasm_toolchain")

wasm_toolchain(name = "wasm_toolchain")
