load("@com_nullcatalyst_prism//config:cc.bzl", "prism_cc_library")
load("@com_nullcatalyst_prism//config:platforms.bzl", "select_platform")

prism_cc_library(
    name = "app",
    hdrs = ["application.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":input",
    ] + select_platform(
        ios = ["//prism/app/sdl2"],
        linux = ["//prism/app/sdl2"],
        macos = ["//prism/app/sdl2"],
        wasm = ["//prism/app/web"],
        windows = ["//prism/app/sdl2"],
    ),
)

prism_cc_library(
    name = "input",
    hdrs = ["input.hpp"],
    visibility = ["//visibility:public"],
)
