load("@com_nullcatalyst_prism//config:cc.bzl", "prism_cc_library")
load("@com_nullcatalyst_prism//config:platforms.bzl", "select_platform")

prism_cc_library(
    name = "app",
    hdrs = ["application.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":backend",
        ":input",
    ],
)

prism_cc_library(
    name = "backend",
    deps = select({
        "//prism:backend_sdl2": [":sdl2_backend"],
        "//prism:backend_web": [":web_backend"],
        "//conditions:default": [":default_backend"],
    }),
)

prism_cc_library(
    name = "default_backend",
    deps = select_platform(
        ios = [":sdl2_backend"],
        linux = [":sdl2_backend"],
        macos = [":sdl2_backend"],
        wasm = [":web_backend"],
        windows = [":sdl2_backend"],
    ),
)

prism_cc_library(
    name = "sdl2_backend",
    deps = ["//prism/app/sdl2"],
)

prism_cc_library(
    name = "web_backend",
    deps = ["//prism/app/web"],
)

prism_cc_library(
    name = "input",
    hdrs = ["input.hpp"],
    visibility = ["//visibility:public"],
)
