load("@com_nullcatalyst_prism//config:cc.bzl", "prism_cc_library")
load("@com_nullcatalyst_prism//config:platforms.bzl", "select_platform")

prism_cc_library(
    name = "graphics",
    hdrs = ["context.hpp"],
    visibility = ["//visibility:public"],
    deps = [":backend"],
)

prism_cc_library(
    name = "backend",
    deps = select({
        "//prism:backend_wgpu": [":wgpu_backend"],
        "//prism:backend_web": [":web_backend"],
        "//conditions:default": [":default_backend"],
    }),
)

prism_cc_library(
    name = "default_backend",
    deps = select_platform(
        ios = [":wgpu_backend"],
        linux = [":wgpu_backend"],
        macos = [":wgpu_backend"],
        wasm = [":web_backend"],
        windows = [":wgpu_backend"],
    ),
)

prism_cc_library(
    name = "wgpu_backend",
    deps = ["//prism/graphics/wgpu"],
)

prism_cc_library(
    name = "web_backend",
    deps = ["//prism/graphics/web"],
)

prism_cc_library(
    name = "enums",
    hdrs = [
        "enums.hpp",
        "enums_validate.hpp",
    ],
    visibility = ["//prism:__subpackages__"],
    deps = ["@com_github_gfxrs_wgpu//:webgpu-hdrs"],
)

prism_cc_library(
    name = "types",
    hdrs = [
        "types.hpp",
        "types_validate.hpp",
    ],
    visibility = ["//prism:__subpackages__"],
    deps = [
        ":enums",
        "@com_github_gfxrs_wgpu//:webgpu-hdrs",
    ],
)
