load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@com_nullcatalyst_prism//config:cc.bzl", "prism_cc_library")

package(default_visibility = ["//visibility:public"])

prism_cc_library(
    name = "dom",
    hdrs = ["dom.hpp"],
    deps = [
        ":object",
        "//prism/wasm:import",
    ],
)

prism_cc_library(
    name = "gpu",
    hdrs = ["gpu.hpp"],
    deps = ["//prism/wasm:import"],
)

prism_cc_library(
    name = "object",
    hdrs = ["object.hpp"],
    deps = [
        "//prism/common:shared",
        "//prism/wasm:import",
    ],
)

ts_project(
    name = "js",
    srcs = [
        "dom.ts",
        "gpu.ts",
        "index.ts",
        "keycode.ts",
        "log.ts",
        "math.ts",
        "memory.ts",
        "object.ts",
        "ref_map.ts",
        "time.ts",
        "webgpu.typings.ts",
    ],
    declaration = True,
    supports_workers = False,
    tsconfig = "tsconfig.json",
)
