load("@com_nullcatalyst_prism//config:cc.bzl", "prism_cc_library")

prism_cc_library(
    name = "web",
    srcs = ["application.cpp"],
    hdrs = ["application.hpp"],
    defines = ["PRISM_BACKEND_WEB=1"],
    visibility = ["//prism:__subpackages__"],
    deps = [
        "//prism/app:input",
        "//prism/common:debug",
        "//prism/common:platform",
        "//prism/js:dom",
        "//prism/js:gpu",
        "//prism/js:object",
    ],
)
