load("@com_nullcatalyst_prism//config:cc.bzl", "prism_cc_library")

prism_cc_library(
    name = "webgpu",
    textual_hdrs = ["webgpu.inl"],
    visibility = ["//prism:__subpackages__"],
    deps = [
        "//prism/common:debug",
        "//prism/common:log",
        "//prism/graphics:enums",
        "//prism/graphics:types",
        "@com_github_gfxrs_wgpu//:hdrs",
        "@com_google_absl//absl/strings:str_format",
    ],
)
