load("@prism_config//:cc.bzl", "prism_cc_library")

prism_cc_library(
    name = "web",
    srcs = [
        "context.cpp",
        "enum_strings.hpp",
    ],
    hdrs = [
        "context.hpp",
        "types.hpp",
    ],
    visibility = ["//prism:__subpackages__"],
    deps = [
        "//prism/common:debug",
        "//prism/common:platform",
        "//prism/graphics:defines",
        "//prism/graphics:enums",
        "//prism/graphics:types",
        "//prism/js:dom",
        "//prism/js:gpu",
        "@com_github_gfxrs_wgpu//:webgpu-hdrs",
    ],
)
