load("@com_nullcatalyst_prism//config:cc.bzl", "prism_cc_library")

prism_cc_library(
    name = "web",
    srcs = [
        "context.cpp",
        "enum_strings.hpp",
    ],
    hdrs = [
        "context.hpp",
        "types.hpp",
    ],
    defines = ["PRISM_BACKEND_WEB=1"],
    visibility = ["//prism:__subpackages__"],
    deps = [
        "//prism/common:debug",
        "//prism/common:platform",
        "//prism/graphics:enums",
        "//prism/graphics:types",
        "//prism/js:dom",
        "//prism/js:gpu",
        "@com_github_gfxrs_wgpu//:webgpu-hdrs",
    ],
)
