load("@prism_config//:cc.bzl", "prism_cc_library")
load("@prism_config//:platforms.bzl", "IOS_PLATFORM", "LINUX_PLATFORM", "MACOS_PLATFORM", "WINDOWS_PLATFORM")

prism_cc_library(
    name = "wgpu",
    srcs = ["context.cpp"],
    hdrs = [
        "context.hpp",
        "types.hpp",
    ],
    visibility = ["//prism:__subpackages__"],
    deps = [
        "//prism/graphics:defines",
        "//prism/common:debug",
        "//prism/common:shared",
        "//prism/common:platform",
        "//prism/graphics/common:webgpu",
        "@com_github_gfxrs_wgpu//:hdrs",
    ] + select({
        WINDOWS_PLATFORM: ["@com_github_gfxrs_wgpu//:lib-windows-x86_64"],
        MACOS_PLATFORM: ["@com_github_gfxrs_wgpu//:lib-macos-x86_64"],
        # IOS_PLATFORM: ["@com_github_gfxrs_wgpu//:lib-ios_sim-x86_64"],
        IOS_PLATFORM: ["@com_github_gfxrs_wgpu//:lib-ios-arm64"],
        LINUX_PLATFORM: ["@com_github_gfxrs_wgpu//:lib-linux-x86_64"],
    }),
)
