load("@com_nullcatalyst_prism//config:cc.bzl", "prism_cc_library")
load("@com_nullcatalyst_prism//config:platforms.bzl", "select_platform")

prism_cc_library(
    name = "wgpu",
    srcs = ["context.cpp"],
    hdrs = [
        "context.hpp",
        "types.hpp",
    ],
    defines = ["PRISM_BACKEND_WGPU=1"],
    visibility = ["//prism:__subpackages__"],
    deps = [
        "//prism/common:debug",
        "//prism/common:platform",
        "//prism/common:shared",
        "//prism/graphics/common:webgpu",
        "@com_github_gfxrs_wgpu//:hdrs",
    ] + select_platform(
        ios = ["@com_github_gfxrs_wgpu//:lib-ios-arm64"],  # ["@com_github_gfxrs_wgpu//:lib-ios_sim-x86_64"],
        linux = ["@com_github_gfxrs_wgpu//:lib-linux-x86_64"],
        macos = ["@com_github_gfxrs_wgpu//:lib-macos-x86_64"],
        windows = ["@com_github_gfxrs_wgpu//:lib-windows-x86_64"],
    ),
)
